fix: swago set auth token
