# docs/swagger.json
@@ -6,6 +6,11 @@
     "paths": {
         "/carbon-electrics": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve a list of carbon electric entries for the logged-in user",
                 "consumes": [
                     "application/json"
@@ -39,6 +44,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Add a new carbon electric entry for the logged-in user",
                 "consumes": [
                     "application/json"
@@ -91,6 +101,11 @@
         },
         "/carbon-electrics/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Fetch details of a specific carbon electric entry by its unique ID",
                 "consumes": [
                     "application/json"
@@ -148,6 +163,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete a specific carbon electric entry by its unique ID",
                 "consumes": [
                     "application/json"
@@ -210,6 +230,11 @@
         },
         "/carbon-fuels": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get all carbon fuels for a specific user",
                 "consumes": [
                     "application/json"
@@ -252,6 +277,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create a new carbon fuel entry for a user with specific fuel data",
                 "consumes": [
                     "application/json"
@@ -304,6 +334,11 @@
         },
         "/carbon-fuels/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get a specific carbon fuel by its ID",
                 "consumes": [
                     "application/json"
@@ -352,6 +387,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete a carbon fuel entry by ID for a specific user",
                 "consumes": [
                     "application/json"
@@ -446,6 +486,11 @@
         },
         "/electrics": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve a list of all electric records",
                 "consumes": [
                     "application/json"
@@ -477,6 +522,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Add a new electric record to the database",
                 "consumes": [
                     "application/json"
@@ -525,6 +575,11 @@
         },
         "/electrics/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Fetch an electric record using its unique ID",
                 "consumes": [
                     "application/json"
@@ -576,6 +631,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Modify the details of an existing electric record",
                 "consumes": [
                     "application/json"
@@ -629,6 +689,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Remove an electric record from the database",
                 "consumes": [
                     "application/json"
@@ -676,6 +741,11 @@
         },
         "/fuels": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve a list of all fuels from cache, if not found, retrieve from database and cache it",
                 "consumes": [
                     "application/json"
@@ -709,6 +779,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create a new fuel record and store it in both the database and cache",
                 "consumes": [
                     "application/json"
@@ -761,6 +836,11 @@
         },
         "/fuels/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve a specific fuel by ID from cache, if not found, retrieve from database and cache it",
                 "consumes": [
                     "application/json"
@@ -818,6 +898,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update a specific fuel by ID in both the database and cache",
                 "consumes": [
                     "application/json"
@@ -884,6 +969,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete a specific fuel by ID from both the database and cache",
                 "consumes": [
                     "application/json"
@@ -1051,6 +1141,11 @@
         },
         "/roles": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve a list of all roles",
                 "consumes": [
                     "application/json"
@@ -1084,6 +1179,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Add a new role to the system",
                 "consumes": [
                     "application/json"
@@ -1136,6 +1236,11 @@
         },
         "/roles/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve details of a specific role by its unique ID",
                 "consumes": [
                     "application/json"
@@ -1193,6 +1298,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update details of an existing role by its unique ID",
                 "consumes": [
                     "application/json"
@@ -1259,6 +1369,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Remove a specific role by its unique ID",
                 "consumes": [
                     "application/json"
@@ -1321,6 +1436,11 @@
         },
         "/users/logout": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Invalidate the user's authentication token",
                 "produces": [
                     "application/json"
@@ -1353,6 +1473,11 @@
         },
         "/users/profile": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve the profile information of the authenticated user",
                 "produces": [
                     "application/json"
@@ -1380,6 +1505,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update user profile fields excluding email",
                 "consumes": [
                     "application/json"
@@ -1432,6 +1562,11 @@
         },
         "/users/update-password": {
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update user password with the current and new password",
                 "consumes": [
                     "application/json"
